More cleanup (starting on PKListener)